# appkernel

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  .travis.yml  FEATURES.MD  README-dev.md  README.md  appkernel.service  cfg.yml  dev-requirements.txt  pylintrc  pyproject.toml  requirements.txt  service.sh  setup.cfg  setup.py
appkernel/: __init__.py  authorisation.py  compat.py  configuration.py  core.py  dsl.py  engine.py  fields.py  file_storage.py  generators.py  http_client.py  iam.py  infrastructure.py  model.py  openapi.py  query.py  rate_limit.py  reflection.py  repository.py  service.py  service_wrapper.py  util.py  validators.py
docs/: Makefile  __conf.py  advanced_rest.md  api.rst  authentication.rst  cli_tutorial.rst  clients.rst  conf.py  contents.rst.inc  contributors.md  developing.md  documentation.md  features.rst  file_storage.rst  index.rst  installation.rst  introduction.rst  license.md  motivation.rst  motivation_vision.rst  openapi.rst  quickstart.rst  rate_limiting.rst  repositories.rst  roadmap.md  services.rst  the_model.rst  translations.rst  tutorial.md  tutorials.rst  versioning.rst
examples/: server.py
hooks/: pre-commit  pre-push  prepare-commit-msg
keys/: appkernel.pem  appkernel.pub
tests/: appkernel_model_test.py  babel.cfg  conftest.py  file_storage_test.py  messages.pot  model_test.py  repo_test.py  request_processor_test.py  service_base_test.py  service_hateoas_test.py  service_test.py  test_authorisation_unit.py  test_controllers.py  test_converters_and_generators.py  test_cors.py  test_dsl.py  test_fields_introspection.py  test_generators.py  test_http_client.py  test_http_client_static.py  test_iam.py  test_infrastructure.py  test_locale_support.py  test_model_unit.py  test_openapi.py  test_pki_key_loading.py  test_rate_limit.py  test_rbac.py  test_reflection.py  test_serialisation.py  test_util.py  test_utils.py  test_validators.py  utils.py
tutorials/: babel.cfg  identity_management.py  inventory_service.py  models.py  order_service.py  payment_service.py  server.py  (+3 more)
(+17 files in other folders)
